--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,13 @@ body {
     background-color: #ffffff;
   }
 }
+
+/* Hide scrollbar for tabs */
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
